# HilbertSort

./: .gitignore  CMakeLists.txt  Hilbert_Zoltan.h  Hilbert_gmsh.h  README.md  SBoundingBox3d.h  SFCSort.cpp  SFCSort.vcxproj  SFCSort.vcxproj.filters  SPoint3.h  setup.py  test.cpp  test.py
conda.recipe/: meta.yaml
examples/: Gmsh_reordering.ipynb  hilbertSort_test.ipynb  test.msh  test2.msh  test_sortted.msh
pybind11/docs/: basics.rst  compiling.rst
src/: hilbertSort.cpp  main.cpp
visual_studio/: AfterSort_Zontal.vtk  BeforeSort_Zontal.vtk  Pts.csv  SFCSort.sln  SFCSort.vcxproj  SFCSort.vcxproj.filters  hilbertSort.cpp  hilbertSort.h
